@@ -228,7 +228,7 @@ read_pgt(kdump_ctx *ctx)
 
 		sz = sizeof addr;
 		ret = kdump_readp(ctx,
-				  KDUMP_PHYSADDR, addr - __START_KERNEL_map,
+				  KDUMP_KPHYSADDR, addr - __START_KERNEL_map,
 				  &entry, &sz);
 		if (ret != kdump_ok)
 			return ret;
@@ -244,7 +244,7 @@ read_pgt(kdump_ctx *ctx)
 		return kdump_syserr;
 
 	ret = kdump_readp(ctx,
-			  KDUMP_PHYSADDR, pgtaddr - __START_KERNEL_map,
+			  KDUMP_KPHYSADDR, pgtaddr - __START_KERNEL_map,
 			  pgt, &sz);
 	if (ret != kdump_ok) {
 		free(pgt);
@@ -316,7 +316,7 @@ ia32_vtop_nonpae(kdump_ctx *ctx, kdump_vaddr_t vaddr, kdump_paddr_t *paddr)
 	base = pgd & PAGE_MASK;
 
 	sz = PAGE_SIZE;
-	ret = kdump_readp(ctx, KDUMP_PHYSADDR, base, tbl, &sz);
+	ret = kdump_readp(ctx, KDUMP_KPHYSADDR, base, tbl, &sz);
 	if (ret != kdump_ok)
 		return ret;
 
@@ -352,7 +352,7 @@ ia32_vtop_pae(kdump_ctx *ctx, kdump_vaddr_t vaddr, kdump_paddr_t *paddr)
 	base = pgd & ~PHYSADDR_MASK_PAE & PAGE_MASK;
 
 	sz = PAGE_SIZE;
-	ret = kdump_readp(ctx, KDUMP_PHYSADDR, base, tbl, &sz);
+	ret = kdump_readp(ctx, KDUMP_KPHYSADDR, base, tbl, &sz);
 	if (ret != kdump_ok)
 		return ret;
 
@@ -370,7 +370,7 @@ ia32_vtop_pae(kdump_ctx *ctx, kdump_vaddr_t vaddr, kdump_paddr_t *paddr)
 	base = pmd & ~PHYSADDR_MASK_PAE & PAGE_MASK;
 
 	sz = PAGE_SIZE;
-	ret = kdump_readp(ctx, KDUMP_PHYSADDR, base, tbl, &sz);
+	ret = kdump_readp(ctx, KDUMP_KPHYSADDR, base, tbl, &sz);
 	if (ret != kdump_ok)
 		return ret;
 
