@@ -148,7 +148,7 @@ kdump_open_known(kdump_ctx *ctx)
 	attr = lookup_attr(ctx, GATTR(GKI_xen_ver_extra_addr));
 	if (attr) {
 		char *extra;
-		res = kdump_read_string(ctx, KDUMP_XENMACHADDR,
+		res = kdump_read_string(ctx, KDUMP_MACHPHYSADDR,
 					attr_value(attr)->address, &extra);
 		if (res == kdump_ok) {
 			set_attr_string(ctx, GATTR(GKI_xen_ver_extra), extra);
