@@ -185,7 +185,7 @@ xlat(kdump_ctx *ctx, struct vtop_control *ctl)
 	--ctl->tbltype;
 
 	sz = (ctl->len - ctl->off) * sizeof(uint64_t);
-	return kdump_readp(ctx, KDUMP_PHYSADDR,
+	return kdump_readp(ctx, KDUMP_KPHYSADDR,
 			   ctl->paddr + ctl->off * sizeof(uint64_t),
 			   ctl->tbl + ctl->off, &sz);
 }
@@ -282,7 +282,7 @@ s390x_vtop_init(kdump_ctx *ctx)
 		uint64_t highmem;
 		size_t sz = sizeof(highmem);
 		/* In identity mapping virtual == physical */
-		ret = kdump_readp(ctx, KDUMP_PHYSADDR, addr, &highmem, &sz);
+		ret = kdump_readp(ctx, KDUMP_KPHYSADDR, addr, &highmem, &sz);
 		if (ret != kdump_ok)
 			return ret;
 		highmem = dump64toh(ctx, highmem);
@@ -312,7 +312,7 @@ read_pgt(kdump_ctx *ctx, kdump_vaddr_t pgtaddr)
 		return kdump_syserr;
 
 	sz = sizeof(uint64_t) * PTRS_PER_PGD;
-	ret = kdump_readp(ctx, KDUMP_PHYSADDR, pgtaddr, pgt, &sz);
+	ret = kdump_readp(ctx, KDUMP_KPHYSADDR, pgtaddr, pgt, &sz);
 	if (ret == kdump_ok)
 		archdata->pgt = pgt;
 	else
@@ -334,7 +334,7 @@ read_os_info_from_lowcore(kdump_ctx *ctx)
 	kdump_status ret;
 
 	sz = sizeof(addr);
-	ret = kdump_readp(ctx, KDUMP_PHYSADDR, LC_OS_INFO, &addr, &sz);
+	ret = kdump_readp(ctx, KDUMP_KPHYSADDR, LC_OS_INFO, &addr, &sz);
 	if (ret != kdump_ok)
 		return set_error(ctx, ret, "Cannot read LC_OS_INFO pointer");
 	addr = dump64toh(ctx, addr);
@@ -347,7 +347,7 @@ read_os_info_from_lowcore(kdump_ctx *ctx)
 				 (unsigned long long) addr);
 
 	sz = PAGE_SIZE;
-	ret = kdump_readp(ctx, KDUMP_PHYSADDR, addr, os_info_buf, &sz);
+	ret = kdump_readp(ctx, KDUMP_KPHYSADDR, addr, os_info_buf, &sz);
 	if (ret != kdump_ok)
 		return set_error(ctx, ret, "Cannot read os_info");
 	os_info = (struct os_info*) os_info_buf;
@@ -377,7 +377,7 @@ read_os_info_from_lowcore(kdump_ctx *ctx)
 	if (!vmcoreinfo)
 		return kdump_syserr;
 
-	ret = kdump_readp(ctx, KDUMP_PHYSADDR, addr, vmcoreinfo, &sz);
+	ret = kdump_readp(ctx, KDUMP_KPHYSADDR, addr, vmcoreinfo, &sz);
 	if (ret != kdump_ok) {
 		free(vmcoreinfo);
 		return set_error(ctx, ret, "Cannot read VMCOREINFO");
@@ -411,7 +411,7 @@ read_vmcoreinfo_from_lowcore(kdump_ctx *ctx)
 	kdump_status ret;
 
 	sz = sizeof(addr);
-	ret = kdump_readp(ctx, KDUMP_PHYSADDR, LC_VMCORE_INFO, &addr, &sz);
+	ret = kdump_readp(ctx, KDUMP_KPHYSADDR, LC_VMCORE_INFO, &addr, &sz);
 	if (ret != kdump_ok)
 		return ret;
 	addr = dump64toh(ctx, addr);
@@ -420,7 +420,7 @@ read_vmcoreinfo_from_lowcore(kdump_ctx *ctx)
 				 "NULL VMCOREINFO pointer");
 
 	sz = sizeof(hdr);
-	ret = kdump_readp(ctx, KDUMP_PHYSADDR, addr, &hdr, &sz);
+	ret = kdump_readp(ctx, KDUMP_KPHYSADDR, addr, &hdr, &sz);
 	if (ret != kdump_ok)
 		return ret;
 	hdr.n_namesz = dump32toh(ctx, hdr.n_namesz);
@@ -434,7 +434,7 @@ read_vmcoreinfo_from_lowcore(kdump_ctx *ctx)
 		return kdump_syserr;
 
 	sz = notesz;
-	ret = kdump_readp(ctx, KDUMP_PHYSADDR, addr, note, &sz);
+	ret = kdump_readp(ctx, KDUMP_KPHYSADDR, addr, note, &sz);
 	if (ret == kdump_ok &&
 	    !memcmp(note + sizeof(Elf64_Nhdr), "VMCOREINFO", hdr.n_namesz))
 		ret = process_notes(ctx, note, notesz);
