@@ -1,5 +1,9 @@
 0.1.8
 -----
+  * API and ABI changed:
+    - new names, types and semantics of KDUMP_*ADDR constants for
+      kdump_readp() and friends
+    - parameters reordered
   * differentiation of Xen dump types (attribute "xen.type")
   * support for opening dumps in Xen hypervisor mode
   * many other Xen improvements
